# nc-signatures

./: .gitpod.yml  CMakeLists.txt  LICENSE  Makefile  README.md  coding.cpp  install.sh  main.cpp  out.txt  test.cpp
fifi/: .gitignore  CMakeLists.txt  LICENSE_EVALUATION.rst  LICENSE_RESEARCH.rst  README.rst  giit.json  prime  resolve.json  wscript
fifi/.github/workflows/: raspberry_pi.yml
fifi/benchmark/arithmetic/: arithmetic.cpp  plot.py  requirements.in  wscript_build
fifi/benchmark/initialization/: init.cpp  wscript_build
fifi/benchmark/prime2325/: prime2325.cpp  wscript_build
fifi/docs/: conf.py  index.rst  license.rst  quick_start.rst
fifi/docs/examples/: basic_arithmetic.rst  custom_prime.rst  examples.rst  print_tables.rst
fifi/docs/expert_api/: expert_api.rst  helper_functions.rst
fifi/docs/expert_api/accelerations/: accelerations.rst  binary16_basic.rst  binary4_avx2.rst  binary4_basic.rst  binary4_neon.rst  binary4_ssse3.rst  binary8_avx2.rst  binary8_basic.rst  binary8_neon.rst  binary8_ssse3.rst  binary_avx2.rst  binary_basic.rst  binary_neon.rst  binary_sse2.rst  prime2325_basic.rst
fifi/docs/expert_api/backends/: backends.rst  binary16_backend.rst  binary4_backend.rst  binary8_backend.rst  binary_backend.rst  prime2325_backend.rst
fifi/docs/expert_api/fields/: binary.rst  binary16.rst  binary4.rst  (+3 more)
fifi/docs/rst_templates/: helper_functions.rst
fifi/docs/user_api/: field_metric.rst  finite_field.rst  math.rst  simd.rst  user_api.rst
fifi/examples/: CMakeLists.txt
fifi/examples/basic_arithmetic/: CMakeLists.txt  basic_arithmetic  basic_arithmetic.cpp  wscript_build
fifi/examples/custom_prime/: CMakeLists.txt  custom_prime.cpp  wscript_build
fifi/examples/print_tables/: CMakeLists.txt  print_tables.cpp  wscript_build
fifi/examples/readme/: CMakeLists.txt  readme.cpp  wscript_build
fifi/examples/simd_accelerations/: CMakeLists.txt  simd_accelerations.cpp  wscript_build
fifi/fifi_install/: NEWS.rst
fifi/src/fifi/: finite_field.hpp  math.cpp  simd.hpp  to_field.cpp  to_string.cpp  utils.hpp  version.cpp
fifi/test/: fifi_tests.cpp  wscript_build
fifi/test/src/: test_field_metric.cpp  test_finite_field.cpp  test_math.cpp  test_simd.cpp  test_to_field.cpp  test_to_string.cpp  test_utils.cpp  test_version.cpp
kodo/: .lock-waf_linux_build  CMakeLists.txt  NEWS.rst  README.rst  build_current  giit.json  resolve.json  wscript
kodo/.github/workflows/: raspberry_pi.yml
kodo/benchmarks/: requirements.txt
kodo/benchmarks/block/: plot.py  throughput.cpp  wscript_build
kodo/benchmarks/fulcrum/: plot.py  throughput.cpp  wscript_build
kodo/benchmarks/perpetual/: plot.py  throughput.cpp  wscript_build
kodo/benchmarks/slide/: plot.py  throughput.cpp  wscript_build
kodo/docs/: conf.py  faq.rst  index.rst  introduction_to_network_coding.rst  quick_start.rst  requirements.in  requirements.txt
kodo/docs/api/: api.rst  finite_field.rst
kodo/docs/block_api/: api.rst  block_decoder.rst  block_encoder.rst  block_generator_parity_2d.rst  block_generator_random_uniform.rst  block_generator_rs_cauchy.rst  block_generator_tunable.rst
kodo/docs/code_examples/: fulcrum_encode_decode_simple.rst  fulcrum_encode_recode_decode_simple.rst  hello_world.rst  parity2d_encode_decode_simple.rst  perpetual_encode_decode_simple.rst  rlnc_encode_decode_simple.rst  rlnc_encode_recode_decode_simple.rst  rlnc_on_the_fly_repair.rst  rlnc_udp_receiver.rst  rlnc_udp_sender.rst  rs_encode_decode_simple.rst  slide_encode_decode_simple.rst
kodo/docs/fulcrum_api/: api.rst  fulcrum_decoder.rst  fulcrum_encoder.rst  fulcrum_generator_random_uniform.rst
kodo/docs/perpetual_api/: api.rst  perpetual_decoder.rst  perpetual_encoder.rst  perpetual_generator_random_uniform.rst  perpetual_offset_random_uniform.rst  perpetual_width.rst
kodo/docs/slide_api/: api.rst  coefficients_memory_layout.rst  definitions.rst  parameter_selection.rst  range.rst  rate_controller.rst  slide_decoder.rst  slide_encoder.rst  slide_generator_random_uniform.rst  stream.rst
kodo/docs/tutorials/: cmake.rst  recoding.rst  simulating_losses.rst  systematic_coding.rst  the_basics.rst  tutorials.rst  videos.rst
kodo/examples/: hello_world.cpp  linear_dependency.cpp
kodo/examples/cmake_fetchcontent/: CMakeLists.txt
kodo/examples/cmake_path/: CMakeLists.txt  main.cpp
kodo/examples/fulcrum/: encode_decode_simple.cpp  encode_recode_decode_simple.cpp
kodo/examples/parity_2d/: encode_decode_simple.cpp
kodo/examples/perpetual/: encode_decode_simple.cpp  workload_distribution.cpp
kodo/examples/rlnc/: encode_decode  encode_decode_simple.cpp  encode_recode_decode_simple  encode_recode_decode_simple.cpp  on_the_fly_repair.cpp  udp_receiver.cpp  udp_sender.cpp
kodo/examples/rs/: encode_decode_simple.cpp
kodo/examples/slide/: encode_decode_simple.cpp
kodo/examples/tutorial/: block_add_loss.cpp  block_basic.cpp  block_recoding.cpp  block_systematic_coding.cpp
kodo/landing_page/: README.txt  index.html
kodo/resolve_symlinks/: abacus  bourne  cpuid  endian  fifi  gbenchmark  gbenchmark-source  gtest  gtest-source  platform  ranbo  recycle  stub  waf-tools
kodo/resolved_dependencies/abacus-1ae4f8/: abacus.tags.json
kodo/resolved_dependencies/bourne-992fab/: bourne.tags.json
kodo/resolved_dependencies/cpuid-4d8071/: cpuid.tags.json
kodo/resolved_dependencies/endian-30a816/: endian.tags.json
kodo/resolved_dependencies/fifi-8960fd/: fifi.tags.json
kodo/resolved_dependencies/gbenchmark-33a8fa/: gbenchmark.tags.json
kodo/resolved_dependencies/gtest-5c3bfe/: gtest.tags.json
kodo/resolved_dependencies/platform-bccd32/: platform.tags.json
kodo/resolved_dependencies/ranbo-aa5c0d/: ranbo.tags.json
kodo/resolved_dependencies/recycle-b2469b/: recycle.tags.json
kodo/resolved_dependencies/stub-90d487/: stub.tags.json
kodo/resolved_dependencies/waf-tools-51dff5/: waf-tools.tags.json
kodo/src/kodo/: to_field.hpp  to_string.cpp
kodo/test/: kodo_tests.cpp
kodo/test/src/: test_finite_field.cpp  test_log_callback.cpp  test_to_field.cpp  test_to_string.cpp  test_version.cpp
(+702 files in other folders)
